<resources>
    <string name="app_name">Coffee bonus</string>
    <string name="profile">profile</string>
    <string name="enter">Войти</string>
    <string name="login">Авторизация</string>
    <string name="your_web_client_id">524045930865-b5kp1l8sth67lq8duv8n76i8bmasob2d.apps.googleusercontent.com</string>
    <string name="logout">Выйти</string>
    <string name="retry">Повторить</string>
    <string name="need_authorisation">Необходима авторизация</string>
    <string name="empty_list">Здесь будут избранные кофейни</string>
    <string name="coffeeShopAll">Показать все кофейни</string>
    <string name="show_all">Посмотреть все</string>
    <string name="not_bonus">Нет бонусной программы</string>
    <string name="eddBonus">Добавить бонусную программу</string>
    <string name="add_coffee_bonus_size">Введите количество кружек кофе для бонуса</string>
    <string name="save">Сохранить</string>
    <string name="add">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="clear">Очистить</string>
    <string name="free">Бонусных\n%d</string>
</resources>