<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/notBonusConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/notBonusTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/not_bonus"
            android:textSize="32sp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addBonusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eddBonus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notBonusTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bonusInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/sendMaterialButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addBonusButton">

            <EditText
                android:id="@+id/bonusEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_coffee_bonus_size"
                android:inputType="number"
                tools:text="42" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendMaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/save"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/bonusInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bonusInputLayout"
            app:layout_constraintTop_toTopOf="@+id/bonusInputLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bonusConstraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flexBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:flexWrap="wrap"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addCoffeeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flexBox"
            android:text="@string/add"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>